# Pywershell

./: LICENSE  README.md  pyproject.toml  test.py
pywershell/: __init__.py  debug.py  pywershell.py  pywersl.py  stream.py
pywershell.egg-info/: PKG-INFO
pywershell/.deprecated/: pywershell.ps1
pywershell/gowershell/: __init__.py  core.py
