# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywershell"
version = "0.2.0"
description = "Async PowerShell wrapper for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "genderlessput" }]
requires-python = ">=3.8"
dependencies = [
  "async-property",
  "propcache",
  "loguru",
  "asyncinit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gowershell*"]

[tool.setuptools.package-data]
gowershell = ["*"]
